@@ -18,6 +18,7 @@
 	fixed normalize || bug
 	fixed normalize bug that removed spaces around * for "all columns"
 		improperly
+	removed freetds warning, modern sybase has different library file names
 
 0.64 - fixed bug in sqlrsh that caused it to filter out non-ascii characters
 	added informix connection module
